@@ -101,7 +101,6 @@ DRIVERNV(blkshpsq)      //Black Sheep Squadron (1979) - using old Stern hardware
 // ---------------
                         //Triangle (Prototype, 1976?)
 DRIVERNV(atarians)      //Atarians, The (November 1976)
-DRIVERNV(atarianb)      //Atarians, The (2002 bootleg)
 DRIVERNV(time2000)      //Time 2000 (June 1977)
 DRIVERNV(aavenger)      //Airborne Avenger (September 1977)
 DRIVERNV(midearth)      //Middle Earth (February 1978)
